--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<div style="height: 100vh; width: 50vh; margin-left: 40vh;">
+    <router-outlet></router-outlet>
+</div>
