Styled landing page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,9 @@
     src: url('../assets/fonts/swiss911.ttf')  format('truetype');
     font-weight: bold;
 }
+
+@font-face {
+    font-family: 'jeopardy';
+    src: url('../assets/fonts/jeopardy.ttf')  format('truetype');
+    font-weight: bold;
+}
