--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="height: 100vh; width: 100vh; margin-left: 40vh; background: #02059B">
-    <router-outlet style="width: 100vh; background: #02059B"></router-outlet>
+<div>
+    <router-outlet></router-outlet>
 </div>
