Fixed padding on mobile

--- a/src/app/question-card/question-card.component.html
+++ b/src/app/question-card/question-card.component.html
@@ -3,46 +3,39 @@
         <h1>JEOPARDY!</h1>
     </button>
     <mat-card class="main-div">
-            <mat-grid-list cols="4" rowHeight="fit" class="background">
-                <mat-grid-tile 
-                    [colspan]="3"
-                    [rowspan]="2"
-                    style="border-bottom: 2px solid white;">
-                    <div class="question" *ngIf='currentQuestion !== undefined'>
-                        <h3>
-                            {{ currentQuestion.question }}
-                        </h3>
-                    </div>
-                </mat-grid-tile>
-                <mat-grid-tile
-                    [colspan]="1"
-                    [rowspan]="1"
-                    style="border-left: 2px solid white;border-bottom: 2px solid white;">
-                    <div class="info" *ngIf='currentQuestion !== undefined'>
-                        <h5>
-                            {{ 'Category: ' + currentQuestion.category.title }}
-                        </h5>
-                        <h5>
-                            {{ 'Airdate: ' + currentQuestion.airdate.toString().split('T')[0] }}
-                        </h5>
-                        <h5>
-                            {{ 'Answer: ' + currentQuestion.answer }}
-                        </h5>
-                    </div>
-                </mat-grid-tile>
-                <mat-grid-tile
-                    [colspan]="1"
-                    [rowspan]="1"
-                    style="border-left: 2px solid white;border-bottom: 2px solid white;">
-                    <div class="difficulty" *ngIf='currentQuestion !== undefined'>
-                        <h1>
-                            {{ '$' + currentQuestion.value }}
-                        </h1>
-                    </div>
-                </mat-grid-tile>
-                <mat-grid-tile [colspan]="4" [rowspan]='1'>
-                    <button (click)="onNext()" mat-raised-button color="primary">Next Question</button>
-                </mat-grid-tile>
-            </mat-grid-list>
-        </mat-card>
+        <mat-grid-list cols="4" rowHeight="fit" class="background">
+            <mat-grid-tile [colspan]="3" [rowspan]="2" style="border-bottom: 2px solid white;">
+                <div class="question" *ngIf='currentQuestion !== undefined'>
+                    <h3>
+                        {{ currentQuestion.question }}
+                    </h3>
+                </div>
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="1" [rowspan]="1"
+                style="border-left: 2px solid white; border-bottom: 2px solid white;">
+                <div class="info" *ngIf='currentQuestion !== undefined'>
+                    <h5>
+                        {{ 'Category: ' + currentQuestion.category.title }}
+                    </h5>
+                    <h5>
+                        {{ 'Airdate: ' + currentQuestion.airdate.toString().split('T')[0] }}
+                    </h5>
+                    <h5>
+                        {{ 'Answer: ' + currentQuestion.answer }}
+                    </h5>
+                </div>
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="1" [rowspan]="1"
+                style="border-left: 2px solid white;border-bottom: 2px solid white;">
+                <div class="difficulty" *ngIf='currentQuestion !== undefined'>
+                    <h1>
+                        {{ '$' + currentQuestion.value }}
+                    </h1>
+                </div>
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="4" [rowspan]='1'>
+                <button (click)="onNext()" mat-raised-button color="primary">Next Question</button>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </mat-card>
 </div>
