Button colors are now consistent

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -50,7 +50,7 @@
         </mat-card-content>
 
         <mat-card-actions style="text-align: center">
-            <button mat-raised-button color="basic" (click)="onSubmit()">
+            <button mat-raised-button color="primary" (click)="onSubmit()">
                 Find Questions!
             </button>
         </mat-card-actions>
